# R-Type

./: .clang_format  .gitignore  .gitmodules  3rd__party__lib_2asio_2asio_2include_2asio_8hpp_source.html  AAudio_8hpp_source.html  AClient_8hpp_source.html  AComponent_8hpp_source.html  AManager_8hpp_source.html  AudioSystem_8hpp_source.html  ButtonSystem_8hpp_source.html  CMakeLists.txt  ComparativeAnalysis.md  ComponentManager_8hpp_source.html  CooldownComponent_8hpp_source.html  CoreModule_8hpp_source.html  DamageComponent_8hpp_source.html  Documentation.md  Doxyfile  Entity_8hpp_source.html  Enum_8hpp_source.html  Foo_8hpp_source.html  FuzzerCorpus_8h_source.html  FuzzerDefs_8h_source.html  FuzzerExtFunctions_8h_source.html  FuzzerInterface_8h_source.html  FuzzerInternal_8h_source.html  FuzzerRandom_8h_source.html  FuzzerTracePC_8h_source.html  FuzzerUtil_8h_source.html  FuzzerValueBitMap_8h_source.html  GameEngine.md  Game_8hpp_source.html  HealthSystem_8hpp_source.html  HitBoxComponent_8hpp_source.html  IAudio_8hpp_source.html  IComponent_8hpp_source.html  IManager_8hpp_source.html  InputComponent_8hpp_source.html  MovementSystem_8hpp_source.html  NetworkMessageFactory_8hpp_source.html  (+4684 more)
ECS/: CMakeLists.txt  RType  main.cpp
ECS/include/: AComponent.hpp  AEntity.hpp  ASystem.hpp  Acomponent.hpp  Aentity.hpp  ComponentManager.hpp  EntityManager.hpp  IComponent.hpp  IEntity.hpp  ISystem.hpp  Icomponent.hpp  Ientity.hpp  SystemManager.hpp
ECS/include/components/: HitBoxComponent.hpp  MusicComponent.hpp  PositionComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextureComponent.hpp
ECS/include/systems/: AudioSystem.hpp  CollisionSystem.hpp  RenderSystem.hpp
ECS/src/: ComponentManager.cpp  EntityManager.cpp  SystemManager.cpp
ECS/src/systems/: AudioSystem.cpp  CollisionSystem.cpp  RenderSystem.cpp
app/client/interface/: CMakeLists.txt
app/client/interface/include/: AClient.hpp  Client.hpp
app/client/src/: CMakeLists.txt  Client.cpp  CoreModule.cpp  clientEx.cpp  main.cpp
app/client/src/Components/: AComponents.cpp
app/client/src/Entities/: AEntities.cpp
app/client/src/EntityManager/: AEntityManager.cpp
app/client/src/Renderer/: ARenderer.cpp
app/client/src/inputHandler/: AInputHandler.cpp
app/ecs/: CMakeLists.txt  main.cpp
app/ecs/include/components/: HitBoxComponent.hpp  PositionComponent.hpp
app/ecs/src/: Clock.cpp  CoreModule.cpp  RtypeEngine.cpp  SfmlGraphic.cpp
app/ecs/src/audios/: CMakeLists.txt  SfmlAudio.cpp
app/ecs/src/components/: CMakeLists.txt
app/ecs/src/entity/: CMakeLists.txt  Entity.cpp
app/ecs/src/graphic/: CMakeLists.txt  SfmlGraphic.cpp
app/ecs/src/graphics/: CMakeLists.txt  Sdl2Graphic.cpp  SfmlGraphic.cpp
app/ecs/src/managers/: CMakeLists.txt
app/ecs/src/systems/: CMakeLists.txt
app/server/interface/: CMakeLists.txt
app/server/interface/include/: AServer.hpp  Server.hpp  ServerSystem.hpp
app/server/src/: CMakeLists.txt  CoreModule.cpp  Game.cpp  main.cpp
app/server/src/include/: Game.hpp
interface/: CMakeLists.txt
interface/include/: Clock.hpp  CoreModule.hpp  Error.hpp  Macros.hpp  NetworkConnection.hpp  NetworkMessage.hpp  NetworkMessageFactory.hpp  NetworkMessagesCommunication.hpp  NetworkQueue.hpp  OwnedMessage.hpp  RtypeEngine.hpp  ServerStatus.hpp  SfmlGraphic.hpp  asio.hpp
interface/include/asio/: any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_cancellation_slot.hpp  associated_immediate_executor.hpp  awaitable.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_streambuf_fwd.hpp  basic_writable_pipe.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  cancellation_signal.hpp  cancellation_state.hpp  cancellation_type.hpp  co_spawn.hpp  compose.hpp  connect_pipe.hpp  consign.hpp  defer.hpp  deferred.hpp  detached.hpp  executor_work_guard.hpp  file_base.hpp  (+30 more)
interface/include/asio/detail/: array_fwd.hpp  base_from_cancellation_state.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  chrono_time_traits.hpp  composed_work.hpp  conditionally_enabled_mutex.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_write_op.hpp  (+109 more)
interface/include/audios/: CMakeLists.txt  SfmlAudio.hpp
interface/include/client/: Client.hpp
interface/include/components/: AIComponent.hpp  BackgroundComponent.hpp  CooldownComponent.hpp  DamageComponent.hpp  HealthComponent.hpp  HitBoxComponent.hpp  InputComponent.hpp  MusicComponent.hpp  OnClickComponent.hpp  ParentComponent.hpp  PositionComponent.hpp  RectangleShapeComponent.hpp  ScrollComponent.hpp  SizeComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  TypeComponent.hpp  VelocityComponent.hpp  WeaponComponent.hpp
interface/include/graphics/: CMakeLists.txt  Color.hpp  Sdl2Graphic.hpp  SfmlGraphic.hpp
interface/include/managers/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp
interface/include/r-type/: AAudio.hpp  AClient.hpp  AComponent.hpp  AGraphic.hpp  AManager.hpp  ASystem.hpp  Entity.hpp  Enum.hpp  IAudio.hpp  IClient.hpp  IComponent.hpp  ICoreModule.hpp  IEntity.hpp  IGraphic.hpp  IManager.hpp  IRtypeEngine.hpp  IServer.hpp  ISystem.hpp
interface/include/systems/: AISytem.hpp  AudioSystem.hpp  BackgroundSystem.hpp  ButtonSystem.hpp  ClientReceiveSystem.hpp  ClientSendSystem.hpp  ClientSystem.hpp  CollisionSystem.hpp  CooldownSystem.hpp  GameSystem.hpp  HealthSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  ServerReceiveSystem.hpp  ServerSendSystem.hpp  ServerSystem.hpp  WeaponSystem.hpp
(+5568 files in other folders)
