add_subdirectory(audio)
add_subdirectory(collision)
add_subdirectory(render)
add_subdirectory(movement)
add_subdirectory(input)
add_subdirectory(health)
add_subdirectory(weapon)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(cooldown)
add_subdirectory(game)
add_subdirectory(ai)
add_subdirectory(button)