# add_library(r-type_audio_system SHARED
#     MusicComponent.cpp
# )

# Specify the SFML include directory
# target_include_directories(r-type_audio_system PRIVATE ${SFML_INCLUDE_DIR})

# Link the SFML library
# target_link_libraries(
#     r-type_audio_system
#     MusicComponent.cpp
#     r-type_interfaces
#     sfml-audio
# )
