# add_library(r-type_audio_system SHARED
#     SoundComponent.cpp
# )

# Specify the SFML include directory
# target_include_directories(r-type_audio_system PRIVATE ${SFML_INCLUDE_DIR})

# Link the SFML library
# target_link_libraries(
#     r-type_audio_system
#     SoundComponent.cpp
#     r-type_interfaces
#     sfml-audio
# )
